# dbt-db2

./: .gitignore  Makefile  README.md  pyproject.toml  test.env  tox.ini  操作指南.md
dbt/adapters/ibmdb2/: __init__.py  _env_bootstrap.py
tests/: 构建测试环境.md
